# canvas-medical-cgm-insights-prototype

./: .gitignore  LICENSE  README.md  index.html  preview.html  pyproject.toml
cgm_insights/: CANVAS_MANIFEST.json  README.md  __init__.py
cgm_insights/applications/: __init__.py  cgm_app.py
cgm_insights/core/: __init__.py  agp.py  billing.py  demo_data.py  metrics.py  nightscout.py  ns_client.py  triage.py
cgm_insights/handlers/: __init__.py  _data.py  billing.py  chart_summary.py  triage.py
docs/: plan.html  preview.html
fixtures/: FIXTURES.md  build_fixtures.py  generate.py  synth_model.py
fixtures/synthetic/: aid_well_controlled.json  at_goal.json  dawn_phenomenon.json  high_variability.json  hyper_prone.json  hypo_prone.json  nocturnal_hypo.json  post_meal_spiker.json
scripts/: install_to_sandbox.sh  preview.py  run.py
tests/: conftest.py  test_agp.py  test_application.py  test_billing.py  test_billing_handler.py  test_demo_data.py  test_fixture_safety.py  test_handlers.py  test_metrics.py  test_nightscout.py  test_ns_client.py  test_triage.py
